Ensure that inner label aligns with text in other inputs.

--- a/_select.scss
+++ b/_select.scss
@@ -116,7 +116,7 @@ $select__draw-caret: true !default;
 
 .c-select__label {
     display: block;
-    margin: 0 1em 0 $unit;
+    margin: 0 1em 0 $horizontal-input-padding;
 }
 
 
